# relayer-kafka-sink

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  lib.rs  main.rs
src/kafkalib/: mod.rs  offset_manager.rs
src/query/: kafka_psql_sink.rs  mod.rs  postgres_sql_init.rs
