[package]
name = "relayer-kafka-sink"
version = "0.1.0"
edition = "2021"
authors = ["Twilight Project"]
description = "A high-throughput Kafka sink service for processing, debugging and storing relayer data from Kafka streams to PostgreSQL"

license = "Apache-2.0"
repository = "https://github.com/twilight-project/relayer-kafka-sink"
readme = "README.md"
keywords = ["relayer", "kafka", "sink", "postgresql", "twilight", "debug"]
categories = ["database", "development-tools", "debugging"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = [
    "v4",
    "serde",
] } #https://github.com/serde-rs/serde/issues/324
dotenv = "0.15.0"
serde_with = { version = "1.4.0", features = ["json"] }
kafka = "0.8"
lazy_static = "1.4.0"
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
postgres-types = { version = "0.1.0", features = [
    "derive",
    "with-serde_json-1",
] }
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
crossbeam-channel = "0.5.6"
